--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "plyr": "^3.5.7-beta.0",
+    "swiper": "^5.3.1",
+    "vue-plyr": "^6.0.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/global-components": "^0.6.0"
+  }
 }
